# essential-function-agent

./: .gitignore  README.md  pyproject.toml
data/: cases.json  syn3a_cases.json
data/runs/: ANTHROPIC_FALSE_POSITIVE_REPORT.md  ANTHROPIC_FALSE_POSITIVE_SHORT.txt  SYN3A_REFUSAL_NOTE.md  run_20260618T224541Z_cheap4.json  run_20260618T225705Z_all6.json  run_20260618T230542Z_b_all6.json  run_20260619T041033Z_syn3a_A.json  run_20260619T041033Z_syn3a_B.json  run_20260619T212521Z_syn3a_A_only.json  syn3a_refusal_matrix.json
docs/: okf_bundle_spec.md  related_work.md
src/efa/: __init__.py  orchestrator.py  orchestrator_b.py
src/efa/orchestrator/: __init__.py
src/efa/tools/: _http.py  esm2.py  evo2_dna.py  fba.py  kegg.py  string_db.py  uniprot.py
tests/: test_esm2_tool.py  test_evo2_dna_tool.py  test_fba_tool.py  test_kegg_tool.py  test_orchestrator.py  test_orchestrator_b.py  test_string_tool.py  test_uniprot_tool.py
