[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efa"
version = "0.0.1"
description = "Neurohybrid agent for essential gene function prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
    "transformers>=4.40",
    "torch>=2.0",
    "rdflib>=7.0",
    "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
