[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efa"
version = "0.1.0"
description = "Neurohybrid agent for essential function prediction in minimal cells"
authors = [{ name = "Rolando Cruz Perez" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "biopython>=1.84",
    "cobra>=0.29",
    "numpy>=1.26",
    "rdflib>=7.0",
    "requests>=2.31",
    "torch>=2.0",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests requiring internet connectivity (UniProt, KEGG, STRING)",
    "gpu: tests that require CUDA-capable GPU and large model artifacts",
]
